@@ -188,10 +188,11 @@ public class PseudoServerTest extends HttpUnitTest {
         PseudoServer ps = new PseudoServer();
         int port = ps.getConnectedPort();
         ps.setResource( resourceName, resourceValue );
-        ps.addResourceHeader( resourceName, "Set-Cookie: age=12, name=george" );
+        ps.addResourceHeader( resourceName, "Set-Cookie: age=12, name= george" );
         ps.addResourceHeader( resourceName, "Set-Cookie: type=short" );
         ps.addResourceHeader( resourceName, "Set-Cookie: funky=ab$==" );
         ps.addResourceHeader( resourceName, "Set-Cookie: p30waco_sso=3.0,en,us,AMERICA,Drew;path=/, PORTAL30_SSO_TEST=X" );
+        ps.addResourceHeader( resourceName, "Set-Cookie: SESSION_ID=17585,Dzm5LzbRPnb95QkUyIX+7w5RDT7p6OLuOVZ91AMl4hsDATyZ1ej+FA==; path=/;" );
 
         try {
             WebConversation wc   = new WebConversation();
@@ -199,13 +200,14 @@ public class PseudoServerTest extends HttpUnitTest {
             WebResponse response = wc.getResponse( request );
             assertEquals( "requested resource", resourceValue, response.getText().trim() );
             assertEquals( "content type", "text/html", response.getContentType() );
-            assertEquals( "number of cookies", 6, wc.getCookieNames().length );
+            assertEquals( "number of cookies", 7, wc.getCookieNames().length );
             assertEquals( "cookie 'age' value", "12", wc.getCookieValue( "age" ) );
             assertEquals( "cookie 'name' value", "george", wc.getCookieValue( "name" ) );
             assertEquals( "cookie 'type' value", "short", wc.getCookieValue( "type" ) );
             assertEquals( "cookie 'funky' value", "ab$==", wc.getCookieValue( "funky" ) );
             assertEquals( "cookie 'p30waco_sso' value", "3.0,en,us,AMERICA,Drew", wc.getCookieValue( "p30waco_sso" ) );
             assertEquals( "cookie 'PORTAL30_SSO_TEST' value", "X", wc.getCookieValue( "PORTAL30_SSO_TEST" ) );
+            assertEquals( "cookie 'SESSION_ID' value", "17585,Dzm5LzbRPnb95QkUyIX+7w5RDT7p6OLuOVZ91AMl4hsDATyZ1ej+FA==", wc.getCookieValue( "SESSION_ID" ) );
         } finally {
             ps.shutDown();
         }
